--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
 
         recyclerviewVersion = "28.0.0"
 
+        koinVersion = '2.0.0-rc-2'
+
+
     }
     repositories {
         google()
